[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dool"
requires-python = "~=3.5"
authors = [{name = "Scott Baker", email = "scott@perturb.org"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/scottchiefbaker/dool"

[project.scripts]
dool = "dool:__main__.__main"

[tool.flit.sdist]
include = ["dool/*"]
exclude = [".github/*", ".gitignore", "docs/*", "examples/*", "install.py", "packaging/*", "Makefile"]
